fix: add gap

--- a/style.css
+++ b/style.css
@@ -26,7 +26,7 @@ img{
     width: 450px;
 }
 nav a , footer a , a i{
-    margin-right: 10px;
+    gap: 10px;
     text-decoration: none;
     font-weight: 700;
     color: white;
@@ -83,7 +83,6 @@ h5{
 }
 .logo{
     max-width: 135px;
-    flex-grow: 1;
     position: absolute;
     top: 50%;
     left: 50%;
